# autocall-pricer

./: .gitignore  README.md  handover_guide.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: market_data.csv
src/autocall_pricer/: __init__.py
src/autocall_pricer/engine/: analytical_greeks.py  greeks.py  market_data.py  monte_carlo.py  vol_surface.py  zero_coupon.py
src/autocall_pricer/products/: autocall.py
src/cigp_autocall_pricer/engine/: greeks.py  market_data.py  monte_carlo.py  vol_surface.py
